trying to fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,8 @@ p.section-description.title {
 /* index.html*/
 
 div.container {
-  margin-left: 10%;
-  margin-right: 10%;
+  /*margin-left: 10%;
+  margin-right: 10%;*/
   display: flex;
   flex-direction: column;
 }
@@ -265,7 +265,7 @@ h2 {
 
 .blue {
   width:60%;
-  height:70%;
+  /*height:70%;*/
   background:#2C4E7A;
   box-shadow:inset 0 4px 4px rgba(0,0,0,0.25);
   border-radius:2px;
@@ -932,7 +932,7 @@ section.hero  {
   clear:both;
   height:100%;
   width:90%;
-  margin-left:5%;
+  /*margin-left:5%;*/
   margin-bottom: 5%;
 }
 
@@ -997,7 +997,7 @@ button#myBtn {
     text-align:center;
     flex-wrap: wrap;
     padding-top: 5%;
-    padding-left: 5%;
+    /*padding-left: 5%;*/
     width:100%;
     margin-left: 0%;
     justify-content: space-between;
